@@ -3,10 +3,10 @@
 // @namespace           aeosynth
 // @version             1.0.7
 // @description         Cross-browser userscript for maximum lurking on 4chan.
-// @copyright           2013 Zixaphir <zixaphirmoxphar@gmail.com>
-// @copyright           2013 Jordan Bates <saudrapsmann@gmail.com>
+// @copyright           2013-2013 Zixaphir <zixaphirmoxphar@gmail.com>
+// @copyright           2013-2013 Jordan Bates <saudrapsmann@gmail.com>
 // @copyright           2009-2011 James Campos <james.r.campos@gmail.com>
-// @copyright           2013 Nicolas Stepien <stepien.nicolas@gmail.com>
+// @copyright           2012-2013 Nicolas Stepien <stepien.nicolas@gmail.com>
 // @license             MIT; http://en.wikipedia.org/wiki/Mit_license
 // @match               *://*.4chan.org/*
 // @grant               GM_getValue
