@@ -1,26 +1,86 @@
-Appchan x Copyright © 2012 Zixaphir <zixaphirmoxphar@gmail.com>
-4chan x Copyright © 2009-2011 James Campos <james.r.campos@gmail.com>
-4chan x Copyright © 2012 Nicolas Stepien <stepien.nicolas@gmail.com>
-OneeChan Copyright © 2012 Jordan Bates
-4chan SS Copyright © 2012 Ahodesuka
-4chan SS Icons from http://raphaeljs.com/icons/ © 2008 Dmitry Baranovskiy
+/*
+ * 4chan x - Version 1.0.7 - 2013-04-14
+ *
+ * Licensed under the MIT license.
+ * https://github.com/seaweedchan/4chan-x/blob/master/LICENSE
+ *
+ * Appchan X Copyright © 2013-2013 Zixaphir <zixaphirmoxphar@gmail.com>
+ *   http://zixaphir.github.io/appchan-x/
+ * 4chan x Copyright © 2009-2011 James Campos <james.r.campos@gmail.com>
+ *   https://github.com/aeosynth/4chan-x
+ * 4chan x Copyright © 2012-2013 Nicolas Stepien <stepien.nicolas@gmail.com>
+ *   https://4chan-x.just-believe.in/
+ * 4chan x Copyright © 2013-2013 Jordan Bates <saudrapsmann@gmail.com>
+ * 	 http://seaweedchan.github.io/4chan-x/
+ * OneeChan Copyright © 2011-2013 Jordan Bates <saudrapsmann@gmail.com>
+ *   http://seaweedchan.github.io/oneechan/
+ * 4chan SS Copyright © 2011-2013 Ahodesuka
+ *   https://github.com/ahodesuka/4chan-Style-Script/
+ * Raphael Icons Copyright © 2013 Dmitry Baranovskiy
+ *   http://raphaeljs.com/icons/
+ *
+ * Permission is hereby granted, free of charge, to any person
+ * obtaining a copy of this software and associated documentation
+ * files (the "Software"), to deal in the Software without
+ * restriction, including without limitation the rights to use,
+ * copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the
+ * Software is furnished to do so, subject to the following
+ * conditions:
+ *
+ * The above copyright notice and this permission notice shall be
+ * included in all copies or substantial portions of the Software.
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+ * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+ * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+ * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+ * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+ * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+ * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+ * OTHER DEALINGS IN THE SOFTWARE.
+ *
+ * Contributors:
+ *   aeosynth
+ *   mayhemydg
+ *   noface
+ *   !K.WeEabo0o
+ *   blaise
+ *   that4chanwolf
+ *   desuwa
+ *   seaweed
+ *   e000
+ *   ahodesuka
+ *   Shou
+ *   ferongr
+ *   xat
+ *   Ongpot
+ *   thisisanon
+ *   Anonymous
+ *   Seiba
+ *   herpaderpderp
+ *   WakiMiko
+ *   btmcsweeney
+ *   AppleBloom
+ *
+ * All the people who've taken the time to write bug reports.
+ *
+ * Thank you.
+ */
 
-Permission is hereby granted, free of charge, to any person
-obtaining a copy of this software and associated documentation
-files (the "Software"), to deal in the Software without
-restriction, including without limitation the rights to use,
-copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the
-Software is furnished to do so, subject to the following
-conditions:
+/*
+ * Linkify based on:
+ *   http://downloads.mozdev.org/greasemonkey/linkify.user.js
+ *   https://github.com/MayhemYDG/LinkifyPlusFork
+ *
+ * Originally written by Anthony Lieuallen of http://arantius.com/
+ * Licensed for unlimited modification and redistribution as long as
+ * this notice is kept intact.
+ */
 
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
-OTHER DEALINGS IN THE SOFTWARE.
+/*
+ * JSColor, JavaScript Color Picker
+ *
+ * @license   GNU Lesser General Public License, http://www.gnu.org/copyleft/lesser.html
+ * @author    Jan Odvarko, http://odvarko.cz
+ * @link      http://JSColor.com
+ */
